# Sports_prop_edge

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  fix_encoding.bat  pyproject.toml  pytest-correlation-last-run.txt  pytest_subst.cmd  pytest_tennis_out.txt  requirements-dev.txt  requirements.txt  run_api.bat  run_app.bat  run_app.ps1  run_daily_sync.bat  run_daily_sync.ps1  run_preflight.ps1
app/: kbo_sync_diagnostics.py  streamlit_app.py
data/: pick_results_ledger.csv  user_bet_journal.csv
tests/: test_auto_grade.py  test_baseball_projections.py  test_board_pipeline.py  test_calibration.py  test_compute_hotpath.py  test_correlation.py  test_daily_sync.py  test_deployment.py  test_distributions_kernel.py  test_kbo_context.py  test_kbo_matchup.py  test_kbo_pitcher_pool.py  test_kbo_statiz.py  test_learning_feedback.py  test_learning_governance.py  test_learning_safety.py  test_leg_pool.py  test_live.py  test_matchup_factors.py  test_math.py  test_mlb_context.py  test_monitoring.py  test_mykbo_scraper.py  test_mykbo_search.py  test_name_utils.py  test_pick_best_market_per_player.py  test_pick_workflow.py  test_pipeline.py  test_portfolio_optimizer.py  test_portfolio_simulation.py  test_priority_patches.py  test_prizepicks.py  test_probability_ledger.py  test_prop_filters.py  test_risk_positioning.py  test_safety.py  test_scalar_leak_guard.py  test_sgp_full_board.py  test_soccer_client.py  test_sport_tier_guards.py  (+7 more)
tools/: _check_api_football.py  _kbo_tier_diag.py  _peek_soccer_pp.py  _peek_tennis_pp.py  _probe_mykbo_api.py  (+37 more)
(+114 files in other folders)
