[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-prop-edge"
version = "0.1.0"
description = "DFS/pick'em prop analysis for traditional sports: NBA, KBO, NFL, and more."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "sleepyyyy" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "streamlit>=1.31",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "html5lib>=1.1",
    "pyarrow>=14.0.1",
    "nba_api>=1.4.1",
    "nfl_data_py>=0.3.2",
]

[project.optional-dependencies]
data = ["lxml>=5.0", "html5lib>=1.1"]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-dotenv>=1.0",
]
dev = ["pytest>=7.0", "httpx>=0.27", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: cold-path or kernel benchmarks (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
